# myai

./: CMakeLists.txt
include/: aim-info.h  config-info.h  create-resource.h  dxgi-capture.h  move-info.h  process-info.h  sf-info.h  win-capture.h
lib/: nvinfer.lib
src/: aim.cpp  config.cpp  create-resource.cpp  dxgi-capture.cpp  main.cpp  move.cpp  process.cpp  win-capture.cpp
